--- a/P009087.opf/meta.yml
+++ b/P009087.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009087
+id: P009087
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1PD90010
   title: བརྒྱད་ཟིལ་རྫོང་གི་ལོ་རྒྱུས།
-  volume: ''
   author: ''
+  volumes: {}
