--- a/P009087.opf/layers/v001/Pagination.yml
+++ b/P009087.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 10230a2756b246fcab1ef4781ce7e4a3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f10ee51be0364a72808ba79345e24af2:
